--- a/PersianSwear.ipynb
+++ b/PersianSwear.ipynb
@@ -9,7 +9,7 @@
       "outputs": [],
       "source": [
         "import json\n",
-        "import os.path"
+        "import os.path\n"
       ]
     },
     {
@@ -21,54 +21,54 @@
       "outputs": [],
       "source": [
         "class PersianSwear(object):\n",
-        "\tdef __init__(self):\n",
-        "\t\tself.data = json.load(open('data.json'))\n",
+        "    def __init__(self):\n",
+        "        self.data = json.load(open('data.json'))\n",
         "\n",
-        "\t# return string\n",
-        "\tdef filter_words(self, text, symbol=\"*\"):\n",
-        "\t\tif(self.is_empty()):\n",
-        "\t\t\treturn text\n",
+        "    # return string\n",
+        "    def filter_words(self, text, symbol=\"*\"):\n",
+        "        if(self.is_empty()):\n",
+        "            return text\n",
         "\n",
-        "\t\ttext = text.split()\n",
-        "\t\tfor i in range(len(text)):\n",
-        "\t\t\tif text[i] in self.data['word']:\n",
-        "\t\t\t\ttext[i] = symbol\n",
+        "        text = text.split()\n",
+        "        for i in range(len(text)):\n",
+        "            if text[i] in self.data['word']:\n",
+        "                text[i] = symbol\n",
         "\n",
-        "\t\treturn \" \".join(text)\n",
+        "        return \" \".join(text)\n",
         "\n",
-        "\t# return boolean\n",
-        "\tdef is_empty(self):\n",
-        "\t\tif(len(self.data['word'])<1):\n",
-        "\t\t\treturn True;\n",
-        "\t\treturn False;\n",
+        "    # return boolean\n",
+        "    def is_empty(self):\n",
+        "        if(len(self.data['word']) < 1):\n",
+        "            return True\n",
+        "        return False\n",
         "\n",
-        "\t# return nothing\n",
-        "\tdef add_word(self, text):\n",
-        "\t\tself.data['word'].append(text)\n",
+        "    # return nothing\n",
+        "    def add_word(self, text):\n",
+        "        self.data['word'].append(text)\n",
         "\n",
-        "\t# return nothing\n",
-        "\tdef remove_word(self, text):\n",
-        "\t\tself.data['word'].remove(text)\t\n",
+        "    # return nothing\n",
+        "    def remove_word(self, text):\n",
+        "        self.data['word'].remove(text)\n",
         "\n",
-        "\t# return boolean\n",
-        "\tdef is_bad(self, text):\n",
-        "\t\treturn text in self.data['word']\n",
+        "    # return boolean\n",
+        "    def is_bad(self, text):\n",
+        "        return text in self.data['word']\n",
         "\n",
-        "\t# return boolean\n",
-        "\tdef has_swear(self, text):\n",
-        "\t\tif(self.is_empty()):\n",
-        "\t\t\treturn text\n",
+        "    # return boolean\n",
+        "    def has_swear(self, text):\n",
+        "        if(self.is_empty()):\n",
+        "            return text\n",
         "\n",
-        "\t\ttext = text.split()\n",
-        "\t\tfor i in range(len(text)):\n",
-        "\t\t\tif text[i] in self.data['word']:\n",
-        "\t\t\t\treturn True\n",
+        "        text = text.split()\n",
+        "        for i in range(len(text)):\n",
+        "            if text[i] in self.data['word']:\n",
+        "                return True\n",
         "\n",
-        "\t\treturn False\n",
+        "        return False\n",
         "\n",
-        "\t# return string\n",
-        "\tdef tostring(self):\n",
-        "\t\treturn ' - '.join(self.data['word'])"
+        "    # return string\n",
+        "    def tostring(self):\n",
+        "        return ' - '.join(self.data['word'])\n"
       ]
     },
     {
@@ -79,7 +79,7 @@
       },
       "outputs": [],
       "source": [
-        "persianswear = PersianSwear()"
+        "persianswear = PersianSwear()\n"
       ]
     },
     {
@@ -102,7 +102,7 @@
         }
       ],
       "source": [
-        "print(persianswear.is_bad('خر'))"
+        "print(persianswear.is_bad('خر'))\n"
       ]
     },
     {
@@ -125,7 +125,7 @@
         }
       ],
       "source": [
-        "print(persianswear.is_bad('امروز'))"
+        "print(persianswear.is_bad('امروز'))\n"
       ]
     },
     {
@@ -148,7 +148,7 @@
         }
       ],
       "source": [
-        "print(persianswear.is_bad('چرت و پرت'))"
+        "print(persianswear.is_bad('چرت و پرت'))\n"
       ]
     },
     {
@@ -172,7 +172,7 @@
       ],
       "source": [
         "persianswear.add_word('چرت و پرت')\n",
-        "print(persianswear.is_bad('چرت و پرت'))"
+        "print(persianswear.is_bad('چرت و پرت'))\n"
       ]
     },
     {
@@ -195,7 +195,7 @@
         }
       ],
       "source": [
-        "print(persianswear.has_swear('تو دوست من هستی'))"
+        "print(persianswear.has_swear('تو دوست من هستی'))\n"
       ]
     },
     {
@@ -218,7 +218,7 @@
         }
       ],
       "source": [
-        "print(persianswear.has_swear('تو هیز هستی'))"
+        "print(persianswear.has_swear('تو هیز هستی'))\n"
       ]
     },
     {
@@ -241,7 +241,7 @@
         }
       ],
       "source": [
-        "print(persianswear.filter_words('تو دوست من هستی'))"
+        "print(persianswear.filter_words('تو دوست من هستی'))\n"
       ]
     },
     {
@@ -264,7 +264,7 @@
         }
       ],
       "source": [
-        "print(persianswear.filter_words('تو هیز هستی'))"
+        "print(persianswear.filter_words('تو هیز هستی'))\n"
       ]
     },
     {
@@ -287,7 +287,7 @@
         }
       ],
       "source": [
-        "print(persianswear.filter_words('تو هیز هستی', '&'))"
+        "print(persianswear.filter_words('تو هیز هستی', '&'))\n"
       ]
     },
     {
@@ -310,7 +310,7 @@
         }
       ],
       "source": [
-        "print(persianswear.tostring())"
+        "print(persianswear.tostring())\n"
       ]
     }
   ],
@@ -321,11 +321,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.3 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.3"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+      }
     }
   },
   "nbformat": 4,
