--- a/PersianSwear.ipynb
+++ b/PersianSwear.ipynb
@@ -9,7 +9,8 @@
       "outputs": [],
       "source": [
         "import json\n",
-        "import os.path\n"
+        "import json\n",
+        "from string import punctuation\n"
       ]
     },
     {
@@ -20,55 +21,63 @@
       },
       "outputs": [],
       "source": [
-        "class PersianSwear(object):\n",
+        "class PersianSwear:\n",
         "    def __init__(self):\n",
-        "        self.data = json.load(open('data.json'))\n",
+        "        with open(\"data.json\") as file:\n",
+        "            self.data = json.load(file)\n",
+        "        self.swear_words = set(self.data[\"word\"])\n",
         "\n",
-        "    # return string\n",
-        "    def filter_words(self, text, symbol=\"*\"):\n",
-        "        if(self.is_empty()):\n",
+        "    def ignoreSY(self, text):\n",
+        "        translator = str.maketrans(\"\", \"\", punctuation)\n",
+        "        return text.translate(translator)\n",
+        "\n",
+        "    def filter_words(self, text, symbol=\"*\", ignoreOT=False):\n",
+        "        if not self.swear_words:\n",
         "            return text\n",
         "\n",
-        "        text = text.split()\n",
-        "        for i in range(len(text)):\n",
-        "            if text[i] in self.data['word']:\n",
-        "                text[i] = symbol\n",
+        "        words = text.split()\n",
+        "        filtered_words = []\n",
+        "        for word in words:\n",
+        "            if word in self.swear_words or (\n",
+        "                ignoreOT and self.ignoreSY(word) in self.swear_words\n",
+        "            ):\n",
+        "                filtered_words.append(symbol)\n",
+        "            else:\n",
+        "                filtered_words.append(word)\n",
         "\n",
-        "        return \" \".join(text)\n",
+        "        return \" \".join(filtered_words)\n",
         "\n",
-        "    # return boolean\n",
         "    def is_empty(self):\n",
-        "        if(len(self.data['word']) < 1):\n",
-        "            return True\n",
-        "        return False\n",
+        "        return not self.swear_words\n",
         "\n",
-        "    # return nothing\n",
-        "    def add_word(self, text):\n",
-        "        self.data['word'].append(text)\n",
+        "    def add_word(self, word):\n",
+        "        self.swear_words.add(word)\n",
+        "        self.data[\"word\"].append(word)\n",
         "\n",
-        "    # return nothing\n",
-        "    def remove_word(self, text):\n",
-        "        self.data['word'].remove(text)\n",
+        "    def remove_word(self, word):\n",
+        "        if word in self.swear_words:\n",
+        "            self.swear_words.remove(word)\n",
+        "        if word in self.data[\"word\"]:\n",
+        "            self.data[\"word\"].remove(word)\n",
         "\n",
-        "    # return boolean\n",
-        "    def is_bad(self, text):\n",
-        "        return text in self.data['word']\n",
+        "    def is_bad(self, text, ignoreOT=False):\n",
+        "        if ignoreOT:\n",
+        "            text = self.ignoreSY(text)\n",
+        "        text = text.replace(\"\\u200c\", \"\")\n",
+        "        return text in self.swear_words\n",
         "\n",
-        "    # return boolean\n",
-        "    def has_swear(self, text):\n",
-        "        if(self.is_empty()):\n",
-        "            return text\n",
+        "    def has_swear(self, text, ignoreOT=False):\n",
+        "        if ignoreOT:\n",
+        "            text = self.ignoreSY(text)\n",
+        "        text = text.replace(\"\\u200c\", \"\")\n",
+        "        if not self.swear_words:\n",
+        "            return False\n",
         "\n",
-        "        text = text.split()\n",
-        "        for i in range(len(text)):\n",
-        "            if text[i] in self.data['word']:\n",
-        "                return True\n",
+        "        words = text.split()\n",
+        "        return any(word in self.swear_words for word in words)\n",
         "\n",
-        "        return False\n",
-        "\n",
-        "    # return string\n",
         "    def tostring(self):\n",
-        "        return ' - '.join(self.data['word'])\n"
+        "        return \" - \".join(self.swear_words)\n"
       ]
     },
     {
