#29 Python : Implementing Multi-word Replacement for Swear Words in Datasets #29

--- a/PersianSwear.ipynb
+++ b/PersianSwear.ipynb
@@ -25,40 +25,74 @@
         "    def __init__(self):\n",
         "        with open(\"data.json\") as file:\n",
         "            self.data = json.load(file)\n",
-        "        self.swear_words = set(self.data[\"word\"])\n",
+        "        all_words = self.data[\"word\"]\n",
+        "        self.swear_words = set(w for w in all_words if \" \" not in w)\n",
+        "        phrase_words_list = [w.split() for w in all_words if \" \" in w]\n",
+        "        self.phrase_list = sorted(phrase_words_list, key=len, reverse=True)\n",
         "\n",
         "    def ignoreSY(self, text):\n",
         "        translator = str.maketrans(\"\", \"\", punctuation)\n",
         "        return text.translate(translator)\n",
         "\n",
         "    def filter_words(self, text, symbol=\"*\", ignoreOT=False):\n",
-        "        if not self.swear_words:\n",
+        "        if not self.swear_words and not self.phrase_list:\n",
         "            return text\n",
         "\n",
         "        words = text.split()\n",
         "        filtered_words = []\n",
-        "        for word in words:\n",
-        "            if word in self.swear_words or (\n",
-        "                ignoreOT and self.ignoreSY(word) in self.swear_words\n",
-        "            ):\n",
-        "                filtered_words.append(symbol)\n",
-        "            else:\n",
-        "                filtered_words.append(word)\n",
-        "\n",
+        "        i = 0\n",
+        "        while i < len(words):\n",
+        "            matched_phrase = False\n",
+        "            for phrase_words in self.phrase_list:\n",
+        "                n = len(phrase_words)\n",
+        "                if i + n > len(words):\n",
+        "                    continue\n",
+        "                if ignoreOT:\n",
+        "                    slice_normalized = [self.ignoreSY(words[i + j]) for j in range(n)]\n",
+        "                    phrase_normalized = [self.ignoreSY(w) for w in phrase_words]\n",
+        "                    if slice_normalized == phrase_normalized:\n",
+        "                        filtered_words.append(symbol)\n",
+        "                        i += n\n",
+        "                        matched_phrase = True\n",
+        "                        break\n",
+        "                else:\n",
+        "                    if words[i : i + n] == phrase_words:\n",
+        "                        filtered_words.append(symbol)\n",
+        "                        i += n\n",
+        "                        matched_phrase = True\n",
+        "                        break\n",
+        "            if not matched_phrase:\n",
+        "                word = words[i]\n",
+        "                if word in self.swear_words or (\n",
+        "                    ignoreOT and self.ignoreSY(word) in self.swear_words\n",
+        "                ):\n",
+        "                    filtered_words.append(symbol)\n",
+        "                else:\n",
+        "                    filtered_words.append(word)\n",
+        "                i += 1\n",
         "        return \" \".join(filtered_words)\n",
         "\n",
         "    def is_empty(self):\n",
-        "        return not self.swear_words\n",
+        "        return not self.swear_words and not self.phrase_list\n",
         "\n",
         "    def add_word(self, word):\n",
-        "        self.swear_words.add(word)\n",
         "        self.data[\"word\"].append(word)\n",
+        "        if \" \" in word:\n",
+        "            phrase_words = word.split()\n",
+        "            self.phrase_list.append(phrase_words)\n",
+        "            self.phrase_list.sort(key=len, reverse=True)\n",
+        "        else:\n",
+        "            self.swear_words.add(word)\n",
         "\n",
         "    def remove_word(self, word):\n",
-        "        if word in self.swear_words:\n",
-        "            self.swear_words.remove(word)\n",
         "        if word in self.data[\"word\"]:\n",
         "            self.data[\"word\"].remove(word)\n",
+        "        if \" \" in word:\n",
+        "            phrase_words = word.split()\n",
+        "            if phrase_words in self.phrase_list:\n",
+        "                self.phrase_list.remove(phrase_words)\n",
+        "        elif word in self.swear_words:\n",
+        "            self.swear_words.remove(word)\n",
         "\n",
         "    def is_bad(self, text, ignoreOT=False):\n",
         "        if ignoreOT:\n",
@@ -67,14 +101,32 @@
         "        return text in self.swear_words\n",
         "\n",
         "    def has_swear(self, text, ignoreOT=False):\n",
+        "        text = text.replace(\"\\u200c\", \"\")\n",
+        "        if not self.swear_words and not self.phrase_list:\n",
+        "            return False\n",
         "        if ignoreOT:\n",
         "            text = self.ignoreSY(text)\n",
-        "        text = text.replace(\"\\u200c\", \"\")\n",
-        "        if not self.swear_words:\n",
-        "            return False\n",
-        "\n",
         "        words = text.split()\n",
-        "        return any(word in self.swear_words for word in words)\n",
+        "        i = 0\n",
+        "        while i < len(words):\n",
+        "            for phrase_words in self.phrase_list:\n",
+        "                n = len(phrase_words)\n",
+        "                if i + n > len(words):\n",
+        "                    continue\n",
+        "                if ignoreOT:\n",
+        "                    slice_n = [self.ignoreSY(words[i + j]) for j in range(n)]\n",
+        "                    phrase_n = [self.ignoreSY(w) for w in phrase_words]\n",
+        "                    if slice_n == phrase_n:\n",
+        "                        return True\n",
+        "                else:\n",
+        "                    if words[i : i + n] == phrase_words:\n",
+        "                        return True\n",
+        "            if words[i] in self.swear_words or (\n",
+        "                ignoreOT and self.ignoreSY(words[i]) in self.swear_words\n",
+        "            ):\n",
+        "                return True\n",
+        "            i += 1\n",
+        "        return False\n",
         "\n",
         "    def tostring(self):\n",
         "        return \" - \".join(self.swear_words)\n"
